// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Model - dimensions:  should match the Dimensions 1`] = `
Object {
  "plpStyleConfig": Object {
    "inPageFiltersBreakpoint": "lg",
    "itemsPerRow": Object {
      "lg": 6,
      "md": 6,
      "sm": 4,
      "xl": 8,
      "xs": 4,
    },
    "productWidthSize": 75,
  },
}
`;

exports[`Model - dimensions:  should match the PlpSectionSizes 1`] = `
Object {
  "inPageFiltersBreakpoint": "lg",
  "itemsPerRow": Object {
    "lg": 6,
    "md": 6,
    "sm": 4,
    "xl": 8,
    "xs": 4,
  },
  "productWidthSize": 75,
}
`;
